@@ -40,13 +40,10 @@ int main()
 }
 
 /* IPA PTA needs to handle indirect calls properly.  Verify that
-   both bar and foo get a (and only a) in their arguments points-to sets.
-   ???  As bar and foo have their address taken there might be callers
-   not seen by IPA PTA (if the address escapes the unit which we only compute
-   during IPA PTA...).  Thus the solution also includes NONLOCAL.  */
+   both bar and foo get a (and only a) in their arguments points-to sets.  */
 
 /* { dg-final { scan-ipa-dump "fn_1 = { bar foo }" "pta2" } } */
-/* { dg-final { scan-ipa-dump "bar.arg0 = { NONLOCAL a }" "pta2" } } */
-/* { dg-final { scan-ipa-dump "bar.arg1 = { NONLOCAL a }" "pta2" } } */
-/* { dg-final { scan-ipa-dump "foo.arg0 = { NONLOCAL a }" "pta2" } } */
-/* { dg-final { scan-ipa-dump "foo.arg1 = { NONLOCAL a }" "pta2" } } */
+/* { dg-final { scan-ipa-dump "bar.arg0 = { a }" "pta2" } } */
+/* { dg-final { scan-ipa-dump "bar.arg1 = { a }" "pta2" } } */
+/* { dg-final { scan-ipa-dump "foo.arg0 = { a }" "pta2" } } */
+/* { dg-final { scan-ipa-dump "foo.arg1 = { a }" "pta2" } } */
